# logcat-color3

./: .travis.yml  README.md  logcat-color  release.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
logcatcolor/: column.py  config.py  format.py  layout.py  main.py  profile.py  reader.py
test/: common.py  config_test.py  format_test.py  logcat_color_test.py  mock-adb  profile_test.py  test.py  test_format.py  test_logcat_color.py
test/logs/: non_utf8_log  non_utf8_output
