[metadata]
name = logcat-color3
description = A colorful alternative to "adb logcat"
long_description = file:README.md
long_description_content_type = text/markdown
author = Marshall Culpepper
author_email = marshall.law@gmail.com
maintainer = Chih-Hsuan Yen
maintainer_email = yan12125@gmail.com
url = https://github.com/yan12125/logcat-color
license = Apache 2.0

[options]
packages = find:

scripts =
    logcat-color

setup_requires =
    wheel
    setuptools_scm

install_requires =
    colorama

[bdist_wheel]
universal = 1
